--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Css/styles.css">
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    
+
+    <div class="flexRow">
+        <p class="box1">1</p>
+        <p class="box2">2</p>
+        <p class="box3">3</p>
+    </div>
+    <div class="flexRow">
+        <p class="box4">4</p>
+        <p class="box5">5</p>
+        <p class="box6">6</p>
+    </div>
+    <div class="flexRow">
+        <p class="box7">7</p>
+        <p class="box8">8</p>
+        <p class="box9">9</p>
+    </div>
 </body>
 </html>
