--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 <body>
     <h1>Tic Tac Toe</h1>
 
-    <div class="flexRow">
-        <p class="box1">1</p>
-        <p class="box2">2</p>
-        <p class="box3">3</p>
-    </div>
-    <div class="flexRow">
-        <p class="box4">4</p>
-        <p class="box5">5</p>
-        <p class="box6">6</p>
-    </div>
-    <div class="flexRow">
-        <p class="box7">7</p>
-        <p class="box8">8</p>
-        <p class="box9">9</p>
-    </div>
+    <section class="gameBoard">
+        <div class="flexRow">
+            <p class="box1">1</p>
+            <p class="box2">2</p>
+            <p class="box3">3</p>
+        </div>
+        <div class="flexRow">
+            <p class="box4">4</p>
+            <p class="box5">5</p>
+            <p class="box6">6</p>
+        </div>
+        <div class="flexRow">
+            <p class="box7">7</p>
+            <p class="box8">8</p>
+            <p class="box9">9</p>
+        </div>
+    </section>
 </body>
 </html>
