--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <section class="gameBoard">
 
-            <p class="box1">1</p>
-            <p class="box2">2</p>
-            <p class="box3">3</p>
+            <p class="box1"></p>
+            <p class="box2"></p>
+            <p class="box3"></p>
 
-            <p class="box4">4</p>
-            <p class="box5">5</p>
-            <p class="box6">6</p>
+            <p class="box4"></p>
+            <p class="box5"></p>
+            <p class="box6"></p>
 
-            <p class="box7">7</p>
-            <p class="box8">8</p>
-            <p class="box9">9</p>
+            <p class="box7"></p>
+            <p class="box8"></p>
+            <p class="box9"></p>
 
     </section>
 </body>
