--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/styles.css">
+    <script src="./JavaScript/script.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
