Added computer logic

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <p class="box8"></p>
             <p class="box9"></p>
 
+            <button class="test">Click me</button>
     </section>
+    <p class = "win"></p>
 </body>
 </html>
