Updated win and loss animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <h2 class = "result">Click a picture to play.</h2>
 
     <section class="gameBoard">
 
@@ -28,7 +29,6 @@
     </section>
 
     <button class="test">Click me</button>
-    <p class = "win"></p>
     
 </body>
 </html>
