added game reset button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </section>
 
-    <button class="test">Click me</button>
+    <button class="reset">Reset Game</button>
     
 </body>
 </html>
