Updated gameplay functionality

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    <h2 class = "result">Click a picture to play.</h2>
+    <h2 class = "result">Click a box to play.</h2>
 
     <section class="gameBoard">
 
-            <p class="box1"></p>
-            <p class="box2"></p>
-            <p class="box3"></p>
+            <p id="box1"></p>
+            <p id="box2"></p>
+            <p id="box3"></p>
 
-            <p class="box4"></p>
-            <p class="box5"></p>
-            <p class="box6"></p>
-
-            <p class="box7"></p>
-            <p class="box8"></p>
-            <p class="box9"></p>
+            <p id="box4"></p>
+            <p id="box5"></p>
+            <p id="box6"></p>
+            <p id="box7"></p>
+            <p id="box8"></p>
+            <p id="box9"></p>
 
     </section>
 
-    <button class="reset">Reset Game</button>
+    <button class="resetButton">Reset Game</button>
     
 </body>
 </html>
